# VantisVPN

./: &quot  .commitlintrc.json  .editorconfig  .eslintrc.json  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc  .yamllint.yml  CHANGELOG.md  CICD_FIX_SUCCESS_SUMMARY.md  CICD_FIX_SUMMARY.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PROJECT_COMPLETION_PLAN.md  PROJECT_COMPLETION_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_FINAL_SUMMARY.md  PROJECT_STATUS_REPORT.md  PROJECT_SUMMARY.md  PUBLIC_STATUS.md  README.de.md  README.en.md  README.es.md  README.fr.md  README.ko.md  README.md  README.pl.md  README.ru.md  README.zh.md  REPOSITORY_CLEANUP_SUMMARY.md  SECURITY.md  WORK_SUMMARY.md  clippy.toml  docker-compose.yml  docusaurus.config.js  (+7 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_report.yml
.github/workflows/: ci.yml  dependencies.yml  minimal.yml  security.yml  simple_test.yml  test.yml  test_workflow.yml
LICENSES/: COMMERCIAL_LICENSE.md  LICENSE_CHOICE.md
docker/: Dockerfile.core  prometheus.yml
docs/: ACCESSIBILITY_REPORT.md  API_DOCUMENTATION.md  CICD_DEPLOYMENT_PROGRESS.md  CICD_FIX_SUMMARY.md  CI_CD_WORKFLOWS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  FEATURE_COMPARISON.md  GITHUB_ACTIONS_RESOLUTION_PLAN.md  PHASE_8_10_PROGRESS_REPORT.md  PUBLIC_VISIBILITY_PLAN.md  RELEASE_NOTES_v1.2.0.md  REPOSITORY_HEALTH_REPORT.md  REPOSITORY_STATUS.md  SBOM.md  SECURITY_WHITEPAPER.md  TESTING_GUIDE.md  USER_GUIDE.md  intro.md
docs/api/: overview.md
docs/architecture/: 01-overview.md  02-microservices.md  SYSTEM_ARCHITECTURE.md  overview.md
docs/compliance/: 01-privacy-by-design.md
docs/security/: overview.md
docs/wiki/: Configuration.md  Home.md  Installation-Guide.md  Post-Quantum-Cryptography.md  Quick-Start.md  Security-Model.md
examples/: README.md  demo.rs  multihop.rs  simple_vpn.rs  stealth_mode.rs
outputs/: workspace_output_1771850536_168.txt  workspace_output_1771850543_8034.txt  workspace_output_1771850553_9993.txt  workspace_output_1771850580_2181.txt  workspace_output_1771850589_118.txt  workspace_output_1771850597_7109.txt  workspace_output_1771850611_4618.txt  workspace_output_1771850649_1774.txt  workspace_output_1771850983_797.txt  workspace_output_1771851186_3397.txt  workspace_output_1771851249_1858.txt  workspace_output_1771851327_7949.txt  workspace_output_1771851342_1368.txt  workspace_output_1771851412_7358.txt  workspace_output_1771851421_2867.txt  workspace_output_1771851465_8706.txt  workspace_output_1771851481_6480.txt  workspace_output_1771851496_3457.txt  workspace_output_1771851537_455.txt  workspace_output_1771851554_1633.txt  workspace_output_1771851573_4428.txt  workspace_output_1771851624_4651.txt  workspace_output_1771851631_4154.txt  workspace_output_1771851661_2424.txt  workspace_output_1771851673_2411.txt  workspace_output_1771851690_9714.txt  workspace_output_1771851729_875.txt  workspace_output_1771851743_9385.txt  workspace_output_1771851775_3836.txt  workspace_output_1771851813_5486.txt  workspace_output_1771851823_1201.txt  workspace_output_1771851834_8759.txt  workspace_output_1771851843_8936.txt  workspace_output_1771851865_7171.txt  workspace_output_1771851888_3070.txt  workspace_output_1771878678_9685.txt  workspace_output_1771878685_3030.txt  workspace_output_1771878697_717.txt
reports/outdated-dependencies/: outdated.json
reports/security-audit/: audit.json
src/core/: Cargo.toml  config.rs  error.rs  lib.rs  utils.rs
src/core/audit/: csfc_compliance.rs  hitrust_compliance.rs  mod.rs  no_logs_audit.rs  pci_dss_compliance.rs  security_pentest.rs  soc2_compliance.rs
src/core/benches/: crypto_bench.rs
src/core/crypto/: cipher.rs  comprehensive_tests.rs  hash.rs  keys.rs  mod.rs  pqc.rs  pqc_full.rs  random.rs
src/core/hardware/: comprehensive_tests.rs  mod.rs  router_os.rs  vantis_os.rs  yubikey.rs
src/core/network/: integration_tests.rs  mod.rs  multihop.rs  protocol.rs  quic.rs  quic_full.rs  stealth.rs  wireguard.rs  wireguard_full.rs
src/core/privacy/: anonymous_payments.rs  avantis_id.rs  comprehensive_tests.rs  gdpr_compliance.rs  ip_rotator.rs  mod.rs  zk_login.rs
src/core/security/: avantis_mesh.rs  comprehensive_tests.rs  daita.rs  kill_switch.rs  mod.rs  netshield.rs  quantum_vault.rs  rbi.rs  split_tunnel.rs  zero_trust.rs
src/core/server/: colocated.rs  comprehensive_tests.rs  ftth_jumbo.rs  mod.rs  ram_only.rs  secure_boot.rs  smart_routing.rs  starlink_fec.rs  tee.rs  wifi7_mlo.rs
src/core/tests/: compliance_test.rs  integration_test.rs  test_utils.rs
src/core/tunnel/: comprehensive_tests.rs  manager.rs  mod.rs  state.rs
src/core/ui/: biometric_auth.rs  comprehensive_tests.rs  devtunnel.rs  family_shield.rs  mod.rs  theme_manager.rs
src/css/: custom.css
