[workspace]
members = ["src/core"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["VANTISVPN Team <security@vantisvpn.com>"]
license = "Proprietary"
repository = "https://github.com/vantisCorp/VantisVPN"
homepage = "https://vantisvpn.com"
documentation = "https://docs.vantisvpn.com"
readme = "README.md"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
# Internal dependencies
vantis-core = { path = "src/core" }

# External dependencies
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Cryptography dependencies
chacha20poly1305 = "0.10"
blake2 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"
rand = "0.10"
rand_core = "0.10"
zeroize = "1.7"

# Network dependencies
quinn = "0.11"
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"
http = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true