[workspace]
members = ["src/core"]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["VANTISVPN Team <security@vantisvpn.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/vantisCorp/VantisVPN"
homepage = "https://vantisvpn.com"
documentation = "https://docs.vantisvpn.com"
readme = "README.md"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
# Internal dependencies
vantis-core = { path = "src/core" }

# Async runtime
tokio = { version = "1.50", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }  # Replacing unmaintained bincode

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
base64 = "0.22"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Cryptography
rand = "0.10"
rand_chacha = { version = "0.10", features = ["std"] }
rand_core = "0.10"
getrandom = "0.4"
chacha20poly1305 = { version = "0.10", features = ["std"] }
blake2 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.0"

# Networking
quinn = "0.11"
tokio-tungstenite = "0.28"
socket2 = "0.6"
hyper = { version = "1.0", features = ["full"] }
hyper-util = "0.1"
http = "1.0"

# Testing
criterion = "0.8"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true