[package]
name = "vantis-core"
version = "0.1.0"
edition = "2021"
authors = ["VANTISVPN Team <dev@vantisvpn.com>"]
description = "Core library for VANTISVPN - Next-Generation Secure VPN System"
license = "Proprietary"
repository = "https://github.com/vantisCorp/VantisVPN"
keywords = ["vpn", "security", "cryptography", "privacy", "network"]
categories = ["network-programming", "cryptography"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Cryptography
rand = "0.8"
rand_chacha = { version = "0.3", features = ["std"] }
chacha20poly1305 = { version = "0.10", features = ["std"] }
blake2 = "0.10"
getrandom = "0.2"
# Post-quantum cryptography (placeholder - will use external libs when available)
# kyber = { version = "0.1", git = "https://github.com/..." }
# dilithium = { version = "0.1", git = "https://github.com/..." }

# Networking
tokio-tungstenite = "0.21"
quinn = "0.11"  # QUIC implementation
socket2 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"

# Utilities
hex = "0.4"
base64 = "0.21"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_NetworkManagement_IpHelper"] }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.27"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[lib]
name = "vantis_core"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0