[package]
name = "vantis-core"
version = "1.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["VANTISVPN Team <dev@vantisvpn.com>"]
description = "Core library for VANTISVPN - Next-Generation Secure VPN System with Post-Quantum Cryptography"
license = "AGPL-3.0-or-later"
repository = "https://github.com/vantisCorp/VantisVPN"
keywords = ["vpn", "security", "cryptography", "privacy", "network", "post-quantum", "quic"]
categories = ["network-programming", "cryptography"]
readme = "README.md"

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Cryptography
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_core = { workspace = true }
chacha20poly1305 = { workspace = true }
blake2 = { workspace = true }
getrandom = { workspace = true }
zeroize = { workspace = true }
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }

# Post-quantum cryptography (placeholder - will use external libs when available)
# ml-kem = { version = "0.1", package = "pqcrypto-mlkem" }  # NIST FIPS 203
# ml-dsa = { version = "0.1", package = "pqcrypto-mldsa" }  # NIST FIPS 204

# Networking
quinn = { workspace = true }
tokio-tungstenite = { workspace = true }
socket2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
postcard = { workspace = true }  # Replacing unmaintained bincode

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tokio-test = "0.4"

[lib]
name = "vantis_core"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std", "quic"]
std = []
quic = ["quinn"]
websocket = ["tokio-tungstenite"]
post-quantum = []  # Enable post-quantum cryptography
hardware-acceleration = []  # Enable hardware-level optimization

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true